# smc_dashboard

./: Cargo.toml  README.md  Trunk.toml  index.html
public/: 404.html
src/: lib.rs  main.rs
src/.github/workflows/: deploy.yml
