[package]
name = "smc_dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1"
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }

console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
gloo-net = "0.7.0"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
